# MLE

./: .gitignore  README.md  setup.txt
Module1/: README.md
Module1-Core Ideas/: README.md
Module2/: Dockerfile  README.md  requirements.txt
Module2-Containerization/: README.md  utils.py
Module2-Containerization/src/: data_loader.py  main.py
Module2/src/: IrisFlower.py  app.py  data_loader.py  main.py
Module3/: README.md
Module3-Experiment Tracking/: data_loader.py
Module3-Experiment Tracking/server/: Dockerfile
Module3/client/: Dockerfile
Module4-Pipelines/: Dockerfile  README.md  airflow_run.sh
Module4-Pipelines/dags/: config.json  student_perfomance_dag.py
Module4-Pipelines/src/: constants.py  data_generate.py  data_process.py
Module5-Model_Deployment/: README.md  data_loader.py  pyproject.toml  requirements.txt  setup.py  utils.py
Module5-Model_Deployment/batch/: Dockerfile  cron.txt  pipeline.py
Module5-Model_Deployment/docker/client/: Dockerfile
Module5-Model_Deployment/docker/server/: Dockerfile
Module5-Model_Deployment/online/: Dockerfile  app.py  preprocess.py  run_inference.py  utils.py
Module5-Model_Deployment/src/ICMD/: data_loader.py  utils.py
Module5-Model_Deployment/src/ICMD/batch/: Dockerfile  batch_inference.py  pipeline.py  schedule.py
Module5-Model_Deployment/src/ICMD/online/: Dockerfile  app.py  run_inference.py  run_server.py
Module5-Model_Deployment/tests/: check_io.py  test_io.py
Module6-AwsSagemaker_Deployment/: save_model.py
Module6-AwsSagemaker_Deployment/docker/: Dockerfile  inference.py  (+1 more)
(+13 files in other folders)
