[project]
name = "ICMD"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "An example package for ML model deployment"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ICMD"]